[project]
name = "smoothness-hpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "cement>=3.0.10",
    "configspace>=1.2.0",
    "cython>=0.29.37",
    "dehb>=0.1.2",
    "raise-utils>=2.5.1",
    "setuptools>=65.0.2",
    "tensorflow>=2.17.0",
]
